# realtime-saas-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml
apps/api/: pyproject.toml
apps/api/src/api/: main.py
apps/api/src/api/core/: auth.py  database.py
apps/api/src/api/services/: ingestion.py
apps/api/src/api/v1/: routes.py  schemas.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: conftest.py  test_ingest_flow.py
apps/api/tests/unit/: test_auth.py  test_webhooks.py
apps/server/src/: main.py
apps/server/src/api/v1/: routes.py
apps/worker/: main.py  pyproject.toml
docker/: Dockerfile  entrypoint.sh  localstack-init.sh
docs/: architecture.md  security.md
infra/: alembic.ini
infra/migrations/: env.py
infra/migrations/seeds/: seed_tenants.py
infra/migrations/versions/: a6464ff1dc88_initial_schema.py
infra/terraform/envs/dev/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  variables.tf
infra/terraform/modules/ec2/: main.tf  outputs.tf  user_data.sh  variables.tf
infra/terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/iam_github_oidc/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/networking/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/rds/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/secrets_manager/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/sqs/: main.tf  outputs.tf  variables.tf
libs/domain/: pyproject.toml
libs/domain/src/domain/: database.py
libs/domain/src/domain/models/: message.py  tenant.py
