[project]
name = "realtime-saas-platform"
version = "0.3.0"
requires-python = ">=3.12"

[dependency-groups]
dev = ["pre-commit", "ruff"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203"]

[tool.uv]
managed = true
package = false

[tool.uv.workspace]
members = ["apps/*", "libs/*"]
