[project]
name = "api"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "redis>=7",
    "sqlalchemy>=2.0",
    "psycopg2-binary",
    "pydantic>=2.0",
    "domain",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
domain = { workspace = true }
