[project]
name = "worker"
version = "0.1.0"
dependencies = [
    "boto3>=1.42.89",
    "sqlalchemy>=2.0",
    "psycopg2-binary",
    "domain",
]

[tool.uv.sources]
domain = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]
